HADOOP-1746 Clean up findbugs warnings
git-svn-id: https://svn.apache.org/repos/asf/lucene/hadoop/trunk@568776 13f79535-47bb-0310-9956-ffa450edef68